--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hannanazari.github.io/shoppingCart",
+  "homepage": "http://hannanazari.github.io/shopping-cart",
   "name": "shopping-cart",
   "private": true,
   "version": "0.0.0",
